tests/baselines/reference/noDefaultLib.errors.txt
error TS2468: Cannot find global value 'conditional'.
error TS2318: Cannot find global type 'Boolean'.
error TS2468: Cannot find global value 'decorator'.
error TS2318: Cannot find global type 'IArguments'.
error TS2468: Cannot find global value 'type'.
error TS2468: Cannot find global value 'returntype'.
error TS2468: Cannot find global value 'paramtypes'.
error TS2468: Cannot find global value 'obsolete'.
error TS2318: Cannot find global type 'MemberDecoratorFunction'.
error TS2318: Cannot find global type 'DecoratorFunction'.
error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
error TS2318: Cannot find global type 'ParameterDecoratorFunction'.
tests/cases/compiler/noDefaultLib.ts(4,11): error TS2317: Global type 'Array' must have 1 type parameter(s).


!!! error TS2468: Cannot find global value 'conditional'.
!!! error TS2318: Cannot find global type 'Boolean'.
!!! error TS2468: Cannot find global value 'decorator'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2468: Cannot find global value 'type'.
!!! error TS2468: Cannot find global value 'returntype'.
!!! error TS2468: Cannot find global value 'paramtypes'.
!!! error TS2468: Cannot find global value 'obsolete'.
!!! error TS2318: Cannot find global type 'MemberDecoratorFunction'.
!!! error TS2318: Cannot find global type 'DecoratorFunction'.
!!! error TS2318: Cannot find global type 'TypedPropertyDescriptor'.
!!! error TS2318: Cannot find global type 'ParameterDecoratorFunction'.
==== tests/cases/compiler/noDefaultLib.ts (1 errors) ====
    /// <reference no-default-lib="true"/>
    var x;
    
    interface Array {}
              ~~~~~
!!! error TS2317: Global type 'Array' must have 1 type parameter(s).
    interface String {}
    interface Number {}
    interface Object {}
    interface Date {}
    interface Function {}
    interface RegExp {}